// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`finalMessage should render a yarn setup message to the console 1`] = `
"Your Twilio Flex Plugin project has been successfully created!


Setup:
$ cd plugin-final-message/
$ yarn install

Development:
$ cd plugin-final-message/
$ twilio flex:plugins:start

Build Command:
$ cd plugin-final-message/
$ twilio flex:plugins:build

Deploy Command:
$ cd plugin-final-message/
$ twilio flex:plugins:deploy

For more info check the README.md file or go to:
➡ https://www.twilio.com/docs/flex"
`;

exports[`finalMessage should render an instruction message skipping the setup step 1`] = `
"Your Twilio Flex Plugin project has been successfully created!


Development:
$ cd plugin-final-message/
$ twilio flex:plugins:start

Build Command:
$ cd plugin-final-message/
$ twilio flex:plugins:build

Deploy Command:
$ cd plugin-final-message/
$ twilio flex:plugins:deploy

For more info check the README.md file or go to:
➡ https://www.twilio.com/docs/flex"
`;

exports[`finalMessage should render an npm setup message to the console 1`] = `
"Your Twilio Flex Plugin project has been successfully created!


Setup:
$ cd plugin-final-message/
$ npm install

Development:
$ cd plugin-final-message/
$ twilio flex:plugins:start

Build Command:
$ cd plugin-final-message/
$ twilio flex:plugins:build

Deploy Command:
$ cd plugin-final-message/
$ twilio flex:plugins:deploy

For more info check the README.md file or go to:
➡ https://www.twilio.com/docs/flex"
`;
